Fixed ugly breadcrumb on mobile

--- a/public/css/page-layout-helpers.css
+++ b/public/css/page-layout-helpers.css
@@ -98,6 +98,7 @@
 @media (max-width: 767px) {
     #breadcrumb-nav {
         left: 5px;
+        top: 90px;
     }
 }
 
